Fix logo on small screens

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,6 +85,12 @@ tr.grey {
 
 #logo-area svg {
 	padding: 75px 0 0 75px;
+	max-width: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	height: auto;
+	overflow: visible;
 
 	image {
 		width: 100%;
